...
    <string name="font_name_poppins">Poppins</string>
    <string name="font_name_inter">Inter</string>
    <string name="font_name_montserrat">Montserrat</string>
    <string name="font_name_lato">Lato</string>

    <!-- AppSortOption -->
    <string name="app_sort_alphabetical">Alphabetical</string>
    <string name="app_sort_last_used">Last used</string>
    <string name="app_sort_installed_date">Installed Date</string>
    <string name="app_sort_last_updated">Last updated</string>

    <!-- ClockDateStyle -->
    <string name="clock_date_style_full">Full</string>
    <string name="clock_date_style_condensed">Condensed</string>

...
